@@ -1,7 +1,6 @@
 package com.quorum.tessera.transaction;
 
 import com.jpmorgan.quorum.mock.servicelocator.MockServiceLocator;
-import com.quorum.tessera.api.model.*;
 import com.quorum.tessera.config.AppType;
 import com.quorum.tessera.config.CommunicationType;
 import com.quorum.tessera.config.Config;
@@ -87,15 +86,17 @@ public class TransactionManagerTest {
         when(enclave.encryptPayload(any(), any(), any())).thenReturn(encodedPayload);
         when(payloadEncoder.forRecipient(any(EncodedPayload.class), any(PublicKey.class))).thenReturn(encodedPayload);
 
-        String sender = Base64.getEncoder().encodeToString("SENDER".getBytes());
-        String receiver = Base64.getEncoder().encodeToString("RECEIVER".getBytes());
+        PublicKey sender = PublicKey.from("SENDER".getBytes());
+        PublicKey receiver = PublicKey.from("RECEIVER".getBytes());
 
         byte[] payload = Base64.getEncoder().encode("PAYLOAD".getBytes());
 
-        SendRequest sendRequest = new SendRequest();
-        sendRequest.setFrom(sender);
-        sendRequest.setTo(receiver);
-        sendRequest.setPayload(payload);
+
+
+        SendRequest sendRequest = mock(SendRequest.class);
+        when(sendRequest.getPayload()).thenReturn(payload);
+        when(sendRequest.getSender()).thenReturn(sender);
+        when(sendRequest.getRecipients()).thenReturn(List.of(receiver));
 
         SendResponse result = transactionManager.send(sendRequest);
 
@@ -121,15 +122,15 @@ public class TransactionManagerTest {
 
         when(payloadEncoder.forRecipient(any(EncodedPayload.class), any(PublicKey.class))).thenReturn(encodedPayload);
 
-        String sender = Base64.getEncoder().encodeToString("SENDER".getBytes());
-        String receiver = Base64.getEncoder().encodeToString("RECEIVER".getBytes());
+        PublicKey sender = PublicKey.from("SENDER".getBytes());
+        PublicKey receiver = PublicKey.from("RECEIVER".getBytes());
 
         byte[] payload = Base64.getEncoder().encode("PAYLOAD".getBytes());
 
-        SendRequest sendRequest = new SendRequest();
-        sendRequest.setFrom(sender);
-        sendRequest.setTo(receiver);
-        sendRequest.setPayload(payload);
+        SendRequest sendRequest = mock(SendRequest.class);
+        when(sendRequest.getPayload()).thenReturn(payload);
+        when(sendRequest.getSender()).thenReturn(sender);
+        when(sendRequest.getRecipients()).thenReturn(List.of(receiver));
 
         SendResponse result = transactionManager.send(sendRequest);
 
@@ -164,11 +165,11 @@ public class TransactionManagerTest {
 
         when(enclave.encryptPayload(any(RawTransaction.class), any())).thenReturn(payload);
 
-        String receiver = Base64.getEncoder().encodeToString("RECEIVER".getBytes());
+        PublicKey receiver = PublicKey.from("RECEIVER".getBytes());
 
-        SendSignedRequest sendSignedRequest = new SendSignedRequest();
-        sendSignedRequest.setTo(receiver);
-        sendSignedRequest.setHash("HASH".getBytes());
+        SendSignedRequest sendSignedRequest = mock(SendSignedRequest.class);
+        when(sendSignedRequest.getRecipients()).thenReturn(List.of(receiver));
+        when(sendSignedRequest.getSignedData()).thenReturn("HASH".getBytes());
 
         SendResponse result = transactionManager.sendSignedTransaction(sendSignedRequest);
 
@@ -206,11 +207,11 @@ public class TransactionManagerTest {
         when(enclave.getForwardingKeys()).thenReturn(Set.of(PublicKey.from("RECEIVER".getBytes())));
         when(enclave.encryptPayload(any(RawTransaction.class), any())).thenReturn(payload);
 
-        String receiver = Base64.getEncoder().encodeToString("RECEIVER".getBytes());
+        PublicKey receiver = PublicKey.from("RECEIVER".getBytes());
 
-        SendSignedRequest sendSignedRequest = new SendSignedRequest();
-        sendSignedRequest.setTo(receiver);
-        sendSignedRequest.setHash("HASH".getBytes());
+        SendSignedRequest sendSignedRequest = mock(SendSignedRequest.class);
+        when(sendSignedRequest.getRecipients()).thenReturn(List.of(receiver));
+        when(sendSignedRequest.getSignedData()).thenReturn("HASH".getBytes());
 
         SendResponse result = transactionManager.sendSignedTransaction(sendSignedRequest);
 
@@ -232,10 +233,10 @@ public class TransactionManagerTest {
 
         when(encryptedRawTransactionDAO.retrieveByHash(any(MessageHash.class))).thenReturn(Optional.empty());
 
-        String receiver = Base64.getEncoder().encodeToString("RECEIVER".getBytes());
-        SendSignedRequest sendSignedRequest = new SendSignedRequest();
-        sendSignedRequest.setTo(receiver);
-        sendSignedRequest.setHash("HASH".getBytes());
+        PublicKey receiver = PublicKey.from("RECEIVER".getBytes());
+        SendSignedRequest sendSignedRequest = mock(SendSignedRequest.class);
+        when(sendSignedRequest.getRecipients()).thenReturn(List.of(receiver));
+        when(sendSignedRequest.getSignedData()).thenReturn("HASH".getBytes());
 
         try {
             transactionManager.sendSignedTransaction(sendSignedRequest);
@@ -249,30 +250,23 @@ public class TransactionManagerTest {
     @Test
     public void delete() {
 
-        String encodedKey = Base64.getEncoder().encodeToString("SOMEKEY".getBytes());
+        MessageHash messageHash = mock(MessageHash.class);
 
-        DeleteRequest deleteRequest = new DeleteRequest();
-        deleteRequest.setKey(encodedKey);
-        transactionManager.delete(deleteRequest);
+        transactionManager.delete(messageHash);
 
-        verify(encryptedTransactionDAO).delete(any(MessageHash.class));
+        verify(encryptedTransactionDAO).delete(messageHash);
     }
 
     @Test
     public void storePayloadAsRecipient() {
-
-        byte[] input = "SOMEDATA".getBytes();
-
         EncodedPayload payload = mock(EncodedPayload.class);
 
         when(payload.getCipherText()).thenReturn("CIPHERTEXT".getBytes());
 
-        when(payloadEncoder.decode(input)).thenReturn(payload);
-
-        transactionManager.storePayload(input);
+        transactionManager.storePayload(payload);
 
         verify(encryptedTransactionDAO).save(any(EncryptedTransaction.class));
-        verify(payloadEncoder).decode(input);
+        verify(payloadEncoder).encode(payload);
         verify(enclave).getPublicKeys();
     }
 
@@ -280,21 +274,17 @@ public class TransactionManagerTest {
     public void storePayloadWhenWeAreSender() {
         final PublicKey senderKey = PublicKey.from("SENDER".getBytes());
 
-        final byte[] input = "SOMEDATA".getBytes();
         final EncodedPayload encodedPayload = mock(EncodedPayload.class);
-
         when(encodedPayload.getSenderKey()).thenReturn(senderKey);
         when(encodedPayload.getCipherText()).thenReturn("CIPHERTEXT".getBytes());
         when(encodedPayload.getRecipientBoxes()).thenReturn(new ArrayList<>());
         when(encodedPayload.getRecipientKeys()).thenReturn(new ArrayList<>());
 
-        when(payloadEncoder.decode(input)).thenReturn(encodedPayload);
         when(enclave.getPublicKeys()).thenReturn(singleton(senderKey));
 
-        transactionManager.storePayload(input);
+        transactionManager.storePayload(encodedPayload);
 
-        verify(resendManager).acceptOwnMessage(input);
-        verify(payloadEncoder).decode(input);
+        verify(resendManager).acceptOwnMessage(encodedPayload);
         verify(enclave).getPublicKeys();
     }
 
@@ -754,11 +744,11 @@ public class TransactionManagerTest {
         byte[] keyData = Base64.getEncoder().encode("KEY".getBytes());
         String recipient = Base64.getEncoder().encodeToString("recipient".getBytes());
 
-        ReceiveRequest receiveRequest = new ReceiveRequest();
-        receiveRequest.setKey(new String(keyData));
-        receiveRequest.setTo(recipient);
-
-        MessageHash messageHash = new MessageHash(keyData);
+        ReceiveRequest receiveRequest = mock(ReceiveRequest.class);
+        MessageHash messageHash = mock(MessageHash.class);
+        when(messageHash.getHashBytes()).thenReturn(keyData);
+        when(receiveRequest.getTransactionHash()).thenReturn(messageHash);
+        when(receiveRequest.getRecipient()).thenReturn(Optional.of(mock(PublicKey.class)));
 
         EncryptedTransaction encryptedTransaction = new EncryptedTransaction(messageHash, keyData);
 
@@ -780,7 +770,7 @@ public class TransactionManagerTest {
 
         assertThat(receiveResponse).isNotNull();
 
-        assertThat(receiveResponse.getPayload()).isEqualTo(expectedOutcome);
+        assertThat(receiveResponse.getUnencryptedTransactionData()).isEqualTo(expectedOutcome);
 
         verify(payloadEncoder).decode(any(byte[].class));
         verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
@@ -792,11 +782,15 @@ public class TransactionManagerTest {
     public void receiveNoTransactionInDatabase() {
 
         byte[] keyData = Base64.getEncoder().encode("KEY".getBytes());
-        String recipient = Base64.getEncoder().encodeToString("recipient".getBytes());
+        PublicKey recipient = PublicKey.from("recipient".getBytes());
 
-        ReceiveRequest receiveRequest = new ReceiveRequest();
-        receiveRequest.setKey(new String(keyData));
-        receiveRequest.setTo(recipient);
+        MessageHash messageHash = mock(MessageHash.class);
+        when(messageHash.getHashBytes()).thenReturn("KEY".getBytes());
+
+
+        ReceiveRequest receiveRequest = mock(ReceiveRequest.class);
+        when(receiveRequest.getTransactionHash()).thenReturn(messageHash);
+        when(receiveRequest.getRecipient()).thenReturn(Optional.of(recipient));
 
         EncodedPayload payload = mock(EncodedPayload.class);
 
@@ -815,14 +809,15 @@ public class TransactionManagerTest {
     @Test
     public void receiveNoRecipientKeyFound() {
 
-        byte[] keyData = Base64.getEncoder().encode("KEY".getBytes());
-        String recipient = Base64.getEncoder().encodeToString("recipient".getBytes());
+        final byte[] keyData = Base64.getEncoder().encode("KEY".getBytes());
+        PublicKey recipient = PublicKey.from("recipient".getBytes());
 
-        ReceiveRequest receiveRequest = new ReceiveRequest();
-        receiveRequest.setKey(new String(keyData));
-        receiveRequest.setTo(recipient);
+        MessageHash messageHash = mock(MessageHash.class);
+        when(messageHash.getHashBytes()).thenReturn("KEY".getBytes());
 
-        MessageHash messageHash = new MessageHash(keyData);
+        ReceiveRequest receiveRequest = mock(ReceiveRequest.class);
+        when(receiveRequest.getTransactionHash()).thenReturn(messageHash);
+        when(receiveRequest.getRecipient()).thenReturn(Optional.of(recipient));
 
         EncryptedTransaction encryptedTransaction = new EncryptedTransaction(messageHash, keyData);
 
@@ -854,13 +849,15 @@ public class TransactionManagerTest {
     public void receiveHH() {
 
         byte[] keyData = Base64.getEncoder().encode("KEY".getBytes());
-        String recipient = Base64.getEncoder().encodeToString("recipient".getBytes());
+        PublicKey recipient = PublicKey.from("recipient".getBytes());
 
-        ReceiveRequest receiveRequest = new ReceiveRequest();
-        receiveRequest.setKey(new String(keyData));
-        receiveRequest.setTo(recipient);
+        MessageHash messageHash = mock(MessageHash.class);
+        when(messageHash.getHashBytes()).thenReturn("KEY".getBytes());
 
-        MessageHash messageHash = new MessageHash(keyData);
+        ReceiveRequest receiveRequest = mock(ReceiveRequest.class);
+        when(receiveRequest.getRecipient()).thenReturn(Optional.of(recipient));
+        when(receiveRequest.getTransactionHash()).thenReturn(messageHash);
+
 
         EncryptedTransaction encryptedTransaction = new EncryptedTransaction(messageHash, null);
 
@@ -889,12 +886,14 @@ public class TransactionManagerTest {
     public void receiveNullRecipientThrowsNoRecipientKeyFound() {
 
         byte[] keyData = Base64.getEncoder().encode("KEY".getBytes());
-        ReceiveRequest receiveRequest = new ReceiveRequest();
-        receiveRequest.setKey(new String(keyData));
 
-        MessageHash messageHash = new MessageHash(keyData);
+        MessageHash transactionHash = mock(MessageHash.class);
+        when(transactionHash.getHashBytes()).thenReturn("KEY".getBytes());
+        ReceiveRequest receiveRequest = mock(ReceiveRequest.class);
+        when(receiveRequest.getRecipient()).thenReturn(Optional.empty());
+        when(receiveRequest.getTransactionHash()).thenReturn(transactionHash);
 
-        EncryptedTransaction encryptedTransaction = new EncryptedTransaction(messageHash, keyData);
+        EncryptedTransaction encryptedTransaction = new EncryptedTransaction(transactionHash, keyData);
 
         EncodedPayload payload = mock(EncodedPayload.class);
 
@@ -924,12 +923,12 @@ public class TransactionManagerTest {
     public void receiveEmptyRecipientThrowsNoRecipientKeyFound() {
 
         byte[] keyData = Base64.getEncoder().encode("KEY".getBytes());
-        ReceiveRequest receiveRequest = new ReceiveRequest();
-        receiveRequest.setKey(new String(keyData));
-        receiveRequest.setTo("");
-        MessageHash messageHash = new MessageHash(keyData);
+        ReceiveRequest receiveRequest = mock(ReceiveRequest.class);
+        MessageHash transactionHash = mock(MessageHash.class);
+        when(transactionHash.getHashBytes()).thenReturn("KEY".getBytes());
+        when(receiveRequest.getTransactionHash()).thenReturn(transactionHash);
 
-        EncryptedTransaction encryptedTransaction = new EncryptedTransaction(messageHash, keyData);
+        EncryptedTransaction encryptedTransaction = new EncryptedTransaction(transactionHash, keyData);
 
         EncodedPayload payload = mock(EncodedPayload.class);
 
@@ -964,17 +963,20 @@ public class TransactionManagerTest {
                         "SomeKey".getBytes(),
                         new Nonce("nonce".getBytes()),
                         PublicKey.from(sender));
+
         when(enclave.encryptRawPayload(any(), any())).thenReturn(rawTransaction);
+
         byte[] payload = Base64.getEncoder().encode("PAYLOAD".getBytes());
-        StoreRawRequest sendRequest = new StoreRawRequest();
-        sendRequest.setFrom(sender);
-        sendRequest.setPayload(payload);
+        StoreRawRequest sendRequest = mock(StoreRawRequest.class);
+        when(sendRequest.getSender()).thenReturn(PublicKey.from(sender));
+        when(sendRequest.getPayload()).thenReturn(payload);
+
         MessageHash expectedHash = messageHashFactory.createFromCipherText("CIPHERTEXT".getBytes());
 
         StoreRawResponse result = transactionManager.store(sendRequest);
 
         assertThat(result).isNotNull();
-        assertThat(result.getKey()).containsExactly(expectedHash.getHashBytes());
+        assertThat(result.getHash().getHashBytes()).containsExactly(expectedHash.getHashBytes());
 
         verify(enclave).encryptRawPayload(eq(payload), eq(PublicKey.from(sender)));
         verify(encryptedRawTransactionDAO)
@@ -990,42 +992,6 @@ public class TransactionManagerTest {
                                 }));
     }
 
-    @Test
-    public void storeRawWithEmptySender() {
-        byte[] sender = "SENDER".getBytes();
-        RawTransaction rawTransaction =
-                new RawTransaction(
-                        "CIPHERTEXT".getBytes(),
-                        "SomeKey".getBytes(),
-                        new Nonce("nonce".getBytes()),
-                        PublicKey.from(sender));
-        when(enclave.encryptRawPayload(any(), any())).thenReturn(rawTransaction);
-        when(enclave.defaultPublicKey()).thenReturn(PublicKey.from(sender));
-        byte[] payload = Base64.getEncoder().encode("PAYLOAD".getBytes());
-        StoreRawRequest sendRequest = new StoreRawRequest();
-        sendRequest.setPayload(payload);
-        MessageHash expectedHash = messageHashFactory.createFromCipherText("CIPHERTEXT".getBytes());
-
-        StoreRawResponse result = transactionManager.store(sendRequest);
-
-        assertThat(result).isNotNull();
-        assertThat(result.getKey()).containsExactly(expectedHash.getHashBytes());
-
-        verify(enclave).encryptRawPayload(eq(payload), eq(PublicKey.from(sender)));
-        verify(enclave).defaultPublicKey();
-
-        verify(encryptedRawTransactionDAO)
-                .save(
-                        argThat(
-                                et -> {
-                                    assertThat(et.getEncryptedKey()).containsExactly("SomeKey".getBytes());
-                                    assertThat(et.getEncryptedPayload()).containsExactly("CIPHERTEXT".getBytes());
-                                    assertThat(et.getHash()).isEqualTo(expectedHash);
-                                    assertThat(et.getNonce()).containsExactly("nonce".getBytes());
-                                    assertThat(et.getSender()).containsExactly(sender);
-                                    return true;
-                                }));
-    }
 
     @Test
     public void constructWithLessArgs() {
@@ -1054,86 +1020,90 @@ public class TransactionManagerTest {
 
     @Test
     public void isSenderThrowsOnMissingTransaction() {
-        final String key = Base64.getEncoder().encodeToString("DUMMY_TRANSACTION".getBytes());
 
-        when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class))).thenReturn(Optional.empty());
+        MessageHash transactionHash = mock(MessageHash.class);
+        when(transactionHash.getHashBytes()).thenReturn("DUMMY_TRANSACTION".getBytes());
 
-        final Throwable throwable = catchThrowable(() -> transactionManager.isSender(key));
+        when(encryptedTransactionDAO.retrieveByHash(transactionHash)).thenReturn(Optional.empty());
+
+        final Throwable throwable = catchThrowable(() -> transactionManager.isSender(transactionHash));
 
         assertThat(throwable)
                 .isInstanceOf(TransactionNotFoundException.class)
                 .hasMessage("Message with hash RFVNTVlfVFJBTlNBQ1RJT04= was not found");
 
-        verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
+        verify(encryptedTransactionDAO).retrieveByHash(transactionHash);
     }
 
     @Test
-    public void isSenderReturnsFalseIfNotSender() {
-        final String key = Base64.getEncoder().encodeToString("DUMMY_TRANSACTION".getBytes());
-
-        final PublicKey senderKey = PublicKey.from("PUBLIC_KEY".getBytes());
+    public void isSenderReturnsFalseIfSenderNotFoundInPublicKeys() {
+        final MessageHash transactionHash = mock(MessageHash.class);
+        when(transactionHash.getHashBytes()).thenReturn("DUMMY_TRANSACTION".getBytes());
 
         final byte[] input = "SOMEDATA".getBytes();
-        final EncryptedTransaction encryptedTransaction = new EncryptedTransaction(new MessageHash(input), input);
-        final EncodedPayload encodedPayload =
-                EncodedPayload.Builder.create()
-                        .withSenderKey(senderKey)
-                        .withCipherText("CIPHERTEXT".getBytes())
-                        .withRecipientBoxes(new ArrayList<>())
-                        .withRecipientKeys(new ArrayList<>())
-                        .build();
 
-        when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
+        final EncryptedTransaction encryptedTransaction = mock(EncryptedTransaction.class);
+        when(encryptedTransaction.getEncodedPayload()).thenReturn(input);
+
+        final EncodedPayload encodedPayload = mock(EncodedPayload.class);
+        PublicKey sender = mock(PublicKey.class);
+        when(encodedPayload.getSenderKey()).thenReturn(sender);
+
+        when(encryptedTransactionDAO.retrieveByHash(transactionHash))
                 .thenReturn(Optional.of(encryptedTransaction));
+
         when(payloadEncoder.decode(input)).thenReturn(encodedPayload);
+
         when(enclave.getPublicKeys()).thenReturn(emptySet());
 
-        final boolean isSender = transactionManager.isSender(key);
+        final boolean isSender = transactionManager.isSender(transactionHash);
 
         assertThat(isSender).isFalse();
 
         verify(enclave).getPublicKeys();
         verify(payloadEncoder).decode(input);
-        verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
+        verify(encryptedTransactionDAO).retrieveByHash(transactionHash);
     }
 
     @Test
     public void isSenderReturnsTrueIfSender() {
-        final String key = Base64.getEncoder().encodeToString("DUMMY_TRANSACTION".getBytes());
 
-        final PublicKey senderKey = PublicKey.from("PUBLIC_KEY".getBytes());
+        MessageHash transactionHash = mock(MessageHash.class);
+        when(transactionHash.getHashBytes()).thenReturn("DUMMY_TRANSACTION".getBytes());
 
         final byte[] input = "SOMEDATA".getBytes();
-        final EncryptedTransaction encryptedTransaction = new EncryptedTransaction(new MessageHash(input), input);
-        final EncodedPayload encodedPayload =
-                EncodedPayload.Builder.create()
-                        .withSenderKey(senderKey)
-                        .withCipherText("CIPHERTEXT".getBytes())
-                        .withRecipientBoxes(new ArrayList<>())
-                        .withRecipientKeys(new ArrayList<>())
-                        .build();
+        final EncryptedTransaction encryptedTransaction = mock(EncryptedTransaction.class);
+        when(encryptedTransaction.getEncodedPayload()).thenReturn(input);
 
-        when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
+        final PublicKey senderKey = mock(PublicKey.class);
+
+        final EncodedPayload encodedPayload = mock(EncodedPayload.class);
+        when(encodedPayload.getSenderKey()).thenReturn(senderKey);
+        when(encryptedTransactionDAO.retrieveByHash(transactionHash))
                 .thenReturn(Optional.of(encryptedTransaction));
-        when(payloadEncoder.decode(input)).thenReturn(encodedPayload);
-        when(enclave.getPublicKeys()).thenReturn(singleton(senderKey));
 
-        final boolean isSender = transactionManager.isSender(key);
+        when(payloadEncoder.decode(input)).thenReturn(encodedPayload);
+
+        when(enclave.getPublicKeys()).thenReturn(Set.of(senderKey));
+
+        final boolean isSender = transactionManager.isSender(transactionHash);
 
         assertThat(isSender).isTrue();
 
         verify(enclave).getPublicKeys();
         verify(payloadEncoder).decode(input);
-        verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
+        verify(encryptedTransactionDAO).retrieveByHash(transactionHash);
     }
 
     @Test
     public void getParticipantsThrowsOnMissingTransaction() {
-        final String key = Base64.getEncoder().encodeToString("DUMMY_TRANSACTION".getBytes());
+
+        MessageHash transactionHash = mock(MessageHash.class);
+        when(transactionHash.getHashBytes()).thenReturn("DUMMY_TRANSACTION".getBytes());
 
         when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class))).thenReturn(Optional.empty());
 
-        final Throwable throwable = catchThrowable(() -> transactionManager.getParticipants(key));
+        final Throwable throwable = catchThrowable(() -> transactionManager.getParticipants(transactionHash));
 
         assertThat(throwable)
                 .isInstanceOf(TransactionNotFoundException.class)
@@ -1144,30 +1114,37 @@ public class TransactionManagerTest {
 
     @Test
     public void getParticipantsReturnsAllRecipients() {
-        final String key = Base64.getEncoder().encodeToString("DUMMY_TRANSACTION".getBytes());
 
-        final PublicKey senderKey = PublicKey.from("PUBLIC_KEY".getBytes());
-        final PublicKey recipientKey = PublicKey.from("RECIPIENTS".getBytes());
+        MessageHash transactionHash = mock(MessageHash.class);
+        when(transactionHash.getHashBytes()).thenReturn("DUMMY_TRANSACTION".getBytes());
+
+        final PublicKey senderKey = mock(PublicKey.class);
+        final PublicKey recipientKey = mock(PublicKey.class);
 
         final byte[] input = "SOMEDATA".getBytes();
-        final EncryptedTransaction encryptedTransaction = new EncryptedTransaction(new MessageHash(input), input);
-        final EncodedPayload encodedPayload =
-                EncodedPayload.Builder.create()
-                        .withSenderKey(senderKey)
-                        .withCipherText("CIPHERTEXT".getBytes())
-                        .withRecipientBoxes(new ArrayList<>())
-                        .withRecipientKeys(Arrays.asList(senderKey, recipientKey))
-                        .build();
+        final EncryptedTransaction encryptedTransaction = mock(EncryptedTransaction.class);
+        final EncodedPayload encodedPayload = mock(EncodedPayload.class);
+        when(encodedPayload.getRecipientKeys()).thenReturn(List.of(senderKey,recipientKey));
+        when(encryptedTransaction.getEncodedPayload()).thenReturn(input);
 
-        when(encryptedTransactionDAO.retrieveByHash(any(MessageHash.class)))
+        when(encryptedTransactionDAO.retrieveByHash(transactionHash))
                 .thenReturn(Optional.of(encryptedTransaction));
+
         when(payloadEncoder.decode(input)).thenReturn(encodedPayload);
 
-        final List<PublicKey> participants = transactionManager.getParticipants(key);
+        final List<PublicKey> participants = transactionManager.getParticipants(transactionHash);
 
         assertThat(participants).containsExactlyInAnyOrder(senderKey, recipientKey);
 
         verify(payloadEncoder).decode(input);
         verify(encryptedTransactionDAO).retrieveByHash(any(MessageHash.class));
+    }
+
+
+    @Test
+    public void defaultPublicKey() {
+        transactionManager.defaultPublicKey();
+        verify(enclave).defaultPublicKey();
+
     }
 }
